# otp

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: add.rs  list.rs  mod.rs  remove.rs  show.rs  watch.rs
src/models/: account.rs
src/services/: mod.rs  otp.rs  storage.rs
