[package]
name = "otp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
base32 = "0.5.1"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["all-widgets", "crossterm", "serde", "termion"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
totp-rs = "5.7.2"
